@@ -1,7 +1,7 @@
 The PRADO framework and the included demos are freeware.
 They are released under the terms of the following BSD License.
 
-Copyright 2004-2006, The PRADO Group (http://www.pradosoft.com)
+Copyright 2004-2007, The PRADO Group (http://www.pradosoft.com)
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
