@@ -19,6 +19,8 @@ This page summarizes the main new features that are introduced in each PRADO rel
 
 <li>Added support to allow <a href="?page=Configurations.AppConfig">including external application configurations</a>. Enhanced template syntax to facilitate <a href="?page=Configurations.Templates1">subproperty configuration</a>.</li>
 
+<li>Added TDbUserManager and TDbUser to simplify <a href="?page=Advanced.Auth">authentication and authorization</a> with user accounts stored in a database.</li>
+
 </ul>
 
 <div class="last-modified">$Id$</div>
