@@ -22,6 +22,7 @@ ENH: Improved exception display with hyperlinked keywords (Qiang)
 ENH: Improved exception display about template syntax error (Qiang)
 NEW: TShellApplication (Qiang)
 NEW: TDbCache (Qiang)
+NEW: TDbUserManager and TDbUser (Qiang)
 NEW: Active Record driver for IBM DB2 (Cesar Ramos)
 
 Version 3.1.0 alpha January 15, 2007
